# fgtparser

./: .gitignore  README.md  pyproject.toml
examples/: example1.py  example2.py  example3.py
fgtparser/: __init__.py  _config.py  _parser.py  config.py  parser.py
src/fgtparser/: __init__.py  _config.py  _parser.py  config.py  parser.py
tests/: __init__.py  test_config.py  test_lexer.py  test_parser.py
tests/config/: test1.conf  test2.conf  test3.conf  test4.conf
