[project]
name = "fgtparser"
version = "1.0"
description = "A FortiGate configuration file parser"
requires-python = ">= 3.11"
authors = [
    {name = "Jean-Noel Meurisse"}
]
license = "GPL-3.0-only"
keywords = ["fortigate", "parser"]

[project.urls]
home = "https://github.com/jnmeurisse/fgtparser"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages=["fgtparser"]