[project]
name = "fgtparser"
version = "1.2"
description = "A FortiGate configuration file parser"
requires-python = ">= 3.11"
authors = [
    {name = "Jean-Noel Meurisse"}
]
license = "GPL-3.0-only"
keywords = ["fortigate", "parser"]

[project.urls]
home = "https://github.com/jnmeurisse/fgtparser"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages=["src/fgtparser"]

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.ruff.lint]
preview = true

[tool.ruff.lint.per-file-ignores]
# Explicit re-exports is fine in __init__.py, still a code smell elsewhere.
"__init__.py" = ["PLC0414"]
"src/*" = ["S105", "UP038", "PLR2004"]
